Apply black formatting

--- a/notebooks/conversion_tutorial.ipynb
+++ b/notebooks/conversion_tutorial.ipynb
@@ -4368,15 +4368,16 @@
             "source": [
                 "from trodes_to_nwb.convert import create_nwbs\n",
                 "\n",
-                "#restrict conversion to a single session, ignores the reconfig metadata in the download\n",
+                "# restrict conversion to a single session, ignores the reconfig metadata in the download\n",
                 "exclude_reconfig_yaml = str(data_path + \"20230622_sample_metadataProbeReconfig.yml\")\n",
-                "query_expression = f\"animal == 'sample' and date == 20230622 and full_path != '{exclude_reconfig_yaml}'\" \n",
+                "query_expression = f\"animal == 'sample' and date == 20230622 and full_path != '{exclude_reconfig_yaml}'\"\n",
                 "\n",
-                "create_nwbs(path=data_path,\n",
-                "            probe_metadata_paths=None,\n",
-                "            output_dir='/stelmo/temp/', #saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
-                "            query_expression=query_expression,\n",
-                ")\n"
+                "create_nwbs(\n",
+                "    path=data_path,\n",
+                "    probe_metadata_paths=None,\n",
+                "    output_dir=\"/stelmo/temp/\",  # saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
+                "    query_expression=query_expression,\n",
+                ")"
             ]
         },
         {
@@ -6796,20 +6797,25 @@
                 }
             ],
             "source": [
-                "#ex) probe reconfiguration\n",
-                "from trodes_to_nwb.tests.utils import data_path as package_data_path #path to package test data\n",
+                "# ex) probe reconfiguration\n",
+                "from trodes_to_nwb.tests.utils import (\n",
+                "    data_path as package_data_path,\n",
+                ")  # path to package test data\n",
                 "\n",
-                "reconfig_path = package_data_path / 'reconfig_probeDevice.trodesconf' #path to reconfiguration file\n",
+                "reconfig_path = (\n",
+                "    package_data_path / \"reconfig_probeDevice.trodesconf\"\n",
+                ")  # path to reconfiguration file\n",
                 "\n",
-                "#restrict conversion to a single session, ignores the non-reconfig metadata in the download\n",
+                "# restrict conversion to a single session, ignores the non-reconfig metadata in the download\n",
                 "exclude_non_reconfig_yaml = str(data_path + \"20230622_sample_metadata.yml\")\n",
                 "query_expression = f\"animal == 'sample' and date == 20230622 and full_path != '{exclude_non_reconfig_yaml}'\"\n",
                 "\n",
-                "create_nwbs(path=data_path,\n",
-                "            probe_metadata_paths=None,\n",
-                "            output_dir='/stelmo/temp/', #saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
-                "            header_reconfig_path=reconfig_path,\n",
-                "            query_expression=query_expression,\n",
+                "create_nwbs(\n",
+                "    path=data_path,\n",
+                "    probe_metadata_paths=None,\n",
+                "    output_dir=\"/stelmo/temp/\",  # saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
+                "    header_reconfig_path=reconfig_path,\n",
+                "    query_expression=query_expression,\n",
                 ")"
             ]
         },
@@ -6832,13 +6838,14 @@
             "source": [
                 "from trodes_to_nwb.convert import create_nwbs\n",
                 "\n",
-                "query_expression = \"'animal' == 'sample' and 'date' == 20230622\" #restricts conversion to a single session\n",
+                "query_expression = \"'animal' == 'sample' and 'date' == 20230622\"  # restricts conversion to a single session\n",
                 "\n",
-                "create_nwbs(path=data_path,\n",
-                "            probe_metadata_paths=None,\n",
-                "            output_dir='/stelmo/temp/', #saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
-                "            query_expression=query_expression,\n",
-                "            n_workers=4,\n",
+                "create_nwbs(\n",
+                "    path=data_path,\n",
+                "    probe_metadata_paths=None,\n",
+                "    output_dir=\"/stelmo/temp/\",  # saving to a temporary directory to not clutter up the database.  Please delete when done.\n",
+                "    query_expression=query_expression,\n",
+                "    n_workers=4,\n",
                 ")"
             ]
         }
